load("@ai_formation_hazel//tools:mangling.bzl", "hazel_library")
load("@rules_haskell//haskell:defs.bzl", "haskell_library")
load("//third_party/haskell/hspec-discover:build_defs.bzl", "hspec_test")
load("//tools/project:build_defs.bzl", "project")

project(standard_travis = True)

haskell_library(
    name = "hs-schema",
    srcs = glob(["src/**/*.*hs"]),
    src_strip_prefix = "src",
    version = "0.0.2",
    deps = [hazel_library("base")],
)

hspec_test(
    name = "testsuite",
    size = "small",
    deps = [
        ":hs-schema",
        "//hs-msgpack-binary",
        hazel_library("QuickCheck"),
        hazel_library("base"),
        hazel_library("groom"),
        hazel_library("hspec"),
    ],
)
