load("@ai_formation_hazel//tools:mangling.bzl", "hazel_library")
load("@rules_haskell//haskell:defs.bzl", "haskell_library")
load("//third_party/haskell/hspec-discover:build_defs.bzl", "hspec_test")
load("//tools/project:build_defs.bzl", "project")

project()

haskell_library(
    name = "hs-schema",
    srcs = glob(["src/**/*.*hs"]),
    src_strip_prefix = "src",
    version = "0.0.4",
    visibility = ["//visibility:public"],
    deps = [
        hazel_library("ansi-wl-pprint"),
        hazel_library("base"),
        hazel_library("casing"),
        hazel_library("data-fix"),
        hazel_library("split"),
        hazel_library("transformers-compat"),
    ],
)

hspec_test(
    name = "testsuite",
    size = "small",
    deps = [
        ":hs-schema",
        hazel_library("QuickCheck"),
        hazel_library("base"),
        hazel_library("bytestring"),
        hazel_library("groom"),
        hazel_library("hspec"),
    ],
)
