load("@rules_haskell//haskell:defs.bzl", "haskell_library")
load("//third_party/haskell/hspec-discover:build_defs.bzl", "hspec_test")
load("//tools/project:build_defs.bzl", "project")

project(license = "gpl3-https")

haskell_library(
    name = "hs-schema",
    srcs = glob(["src/**/*.*hs"]),
    src_strip_prefix = "src",
    tags = ["no-cross"],
    version = "0.0.4",
    visibility = ["//visibility:public"],
    deps = [
        "//third_party/haskell:aeson",
        "//third_party/haskell:ansi-wl-pprint",
        "//third_party/haskell:base",
        "//third_party/haskell:casing",
        "//third_party/haskell:data-fix",
        "//third_party/haskell:scientific",
        "//third_party/haskell:split",
        "//third_party/haskell:text",
        "//third_party/haskell:transformers-compat",
        "//third_party/haskell:unordered-containers",
        "//third_party/haskell:vector",
    ],
)

hspec_test(
    name = "testsuite",
    size = "small",
    deps = [
        ":hs-schema",
        "//third_party/haskell:QuickCheck",
        "//third_party/haskell:base",
        "//third_party/haskell:bytestring",
        "//third_party/haskell:groom",
        "//third_party/haskell:hspec",
    ],
)
